# bellavibe

./: Cargo.toml  README.md
src/: main.rs
src/categorias/: categoria_router.rs  categoria_structs.rs  mod.rs
src/produtos/: mod.rs  produtos_router.rs  produtos_structs.rs
src/shared/: mod.rs  shared_structs.rs
src/usuarios/: auth_middleware.rs  mod.rs  usuario_router.rs  usuario_structs.rs
src/vendas/: mod.rs  vendas_router.rs  vendas_structs.rs
