[package]
name = "bellavibe"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
bigdecimal = { version = "0.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "^0.6", features = ["runtime-actix-rustls", "postgres", "bigdecimal"] }
