[package]
name = "bellavibe"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
bigdecimal = { version = "0.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "^0.6", features = ["runtime-actix-rustls", "postgres", "bigdecimal"] }

bcrypt = "0.15" # Para hashing de senhas
jsonwebtoken = "8" # Dependência para JWTs
chrono = { version = "0.4", features = ["serde"] } # Dependência para gerenciar tempo (expiração do token)
futures = "0.3"
